--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@angular/cli": "11.0.4",
     "@angular/compiler-cli": "11.0.5",
     "@angular/language-service": "11.0.5",
+    "@architect/sandbox": "^4.2.2",
     "@types/bootstrap": "5.0.1",
     "@types/chartist": "0.11.0",
     "@types/googlemaps": "3.40.5",
